--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="./css/styles.css" type="text/css">
 </head>
 <body>
+        <div class="navs">
+                <ul>
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="order.html">Order Now</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+               </div>
+                   
+ 
+
     
 </body>
 </html>
