--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>pizza pizza</title>
     <link rel="stylesheet" href="./bootstrap-4.3.1-dist/css/bootstrap.css" type="text/css">
-    <script src="./js/jquery-3.4.1.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="jquery-3.4.1.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 <body> 
