--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <script src="jquery-3.4.1.js"></script>
     <script src="scripts.js"></script>
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
    
   <div class="container">
     <h1>pizza hub cafe</h1>
     <div class="jumbotron">
-      <h1>Order a custom made pizza!</h1>
+      <h1>PIZZA HUB CAFE</h1>
       <h3>Select a size, base and toppings.</h3>
     </div>
     <form id="pizzaorder">
@@ -130,6 +131,13 @@
         <h4>Order Receipt:</h4>
         <span id="receipt"></span>
       </div><!--column-->
+    </div>
+    <div id="contacts">
+      <i class="fa fa-facebook-square" style="font-size:48px;color:red"></i>
+      <i class="fa fa-google-plus-official" style="font-size:48px;color:red"></i>
+      <i class="fa fa-twitter" style="font-size:48px;color:red"></i>
+      <i class="fa fa-youtube-play" style="font-size:48px;color:red"></i>
+
     </div>
   </div><!--Container-->
 
