--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
     <i class="fa fa-google-plus-official" style="font-size:48px;color:red"></i>
     <i class="fa fa-twitter" style="font-size:48px;color:red"></i>
     <i class="fa fa-youtube-play" style="font-size:48px;color:red"></i>
+  </div> 
+  <div class="footer">
+    <p><em>(C) PIZZA HUB /2019</em> </p>
   </div>
 
             
