--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <nav id="nav"> 
+      <li><a href="#menu">Menu</a></li>
+      <li><a href="#home"></a>Home</li>
+      <li><a href="#contacts">Contacts</a></li>
+  </nav>
    
   <div class="container">
     <h1>pizza hub cafe</h1>
