create a styles in css file to style aboutus class for visibility

--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
 <body>
   <nav id="nav"> 
       <li><a href="#menu">Menu</a></li>
-      <li><a href="#aboutus">ABOUTUS</a></li>
-      
-      <li><a href="#contacts">Contacts</a></li>
+      <li><a href="#aboutus">Aboutus</a></li>
+            <li><a href="#contacts">Contacts</a></li>
   </nav>
    
   <div class="container">
-    <h1>pizza hub cafe</h1>
-    <div class="jumbotron">
+        <div class="jumbotron">
       <h1>PIZZA HUB CAFE</h1>
       <h3>Select a size, base and toppings.</h3>
     </div>
@@ -33,7 +31,8 @@
               What Size Pizza Would You Like?
               ￼ Small
               ￼ Medium
-              ￼ Large        <div class="panel-heading">
+              ￼ Large
+              <div class="panel-heading">
               <h4>What Size Pizza Would You Like?</h4>
             </div>
             <div class="panel-body">
