--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav id="nav"> 
       <li><a href="#menu">Menu</a></li>
-      <li><a href="#aboutus">Aboutus</a></li>
+      <li><a href="#aboutus">aboutus</a></li>
             <li><a href="#contacts">Contacts</a></li>
   </nav>
    
@@ -27,12 +27,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="panel panel-default">
-              e, base and toppings.
-              What Size Pizza Would You Like?
-              ￼ Small
-              ￼ Medium
-              ￼ Large
-              <div class="panel-heading">
+             
+                           <div class="panel-heading">
               <h4>What Size Pizza Would You Like?</h4>
             </div>
             <div class="panel-body">
