create a readme which i add some align ment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav id="nav"> 
       <li><a href="#menu">Menu</a></li>
-      <li><a href="#aboutus">aboutus</a></li>
+      <li><a href="#aboutus">Aboutus</a></li>
             <li><a href="#contacts">Contacts</a></li>
   </nav>
    
